--- a/lessons/lesson-1/lesson-1.html
+++ b/lessons/lesson-1/lesson-1.html
@@ -4,7 +4,6 @@
         <link href="style.css" rel="stylesheet" />
     </head>
     <body>
-        <script src="calculator.js"></script>
-        <script src="app.js"></script>
+        <script src="app.js" type="module"></script>
     </body>
 </html>
