--- a/lessons/lesson-1/lesson-1.html
+++ b/lessons/lesson-1/lesson-1.html
@@ -2,6 +2,7 @@
     <head>
         <meta charset="utf-8"/>
         <link href="style.css" rel="stylesheet" />
+        <title>Калькулятор зарплаты</title>
     </head>
     <body>
         <script src="app.js" type="module"></script>
