--- a/lessons/app/index.html
+++ b/lessons/app/index.html
@@ -1,6 +1,7 @@
 <html>
     <head>
         <link rel="stylesheet" href="main.css" /> 
+        <meta name="viewport" content="width=device-width, initial-scale=1, maximal-scale=1, minimal-scale=1">
     </head>
     <body>
         <script src="main.js"></script>
