--- a/lessons/navigation/index.html
+++ b/lessons/navigation/index.html
@@ -74,7 +74,8 @@
                         <div class="navigation__body">
                             <div class="subnavigation__item">Контактная информация</div>
                             <div class="subnavigation__item">Особенности</div>
-                            <div class="subnavigation__item">Изображения</div>
+                            <div class="subnavigation__item">Фотографии</div>
+                            <div class="subnavigation__item">Публикации</div>
                             <div class="subnavigation__item">Сотрудники</div>
                             <div class="subnavigation__item">Формы</div>
                             <div class="subnavigation__item">Сайт</div>
