--- a/lessons/navigation/index.html
+++ b/lessons/navigation/index.html
@@ -112,9 +112,7 @@
                             <div class="nav-text">Реклама</div>
                         </div>
                         <div class="navigation__body">
-                            <div class="subnavigation__item">Рекламная кампания</div>
-                            <div class="subnavigation__item">Цель</div>
-                            <div class="subnavigation__item">Объявления</div>
+                            <div class="subnavigation__item">Рекламные кампании</div>
                             <div class="subnavigation__item">Статистика</div>
                         </div>
                     </div>
