--- a/lessons/navigation/index.html
+++ b/lessons/navigation/index.html
@@ -95,6 +95,7 @@
                         <div class="navigation__body">
                             <div class="subnavigation__item"><span>Заявки</span><div class="nav-counter nav-counter_inside">2</div></div>
                             <div class="subnavigation__item">Календарь</div>
+                            <div class="subnavigation__item"><div class="sidebar-button sidebar-button_icon-add">Создать заказ</div></div>
                         </div>
                     </div>
 
@@ -104,8 +105,9 @@
                             <div class="nav-text">Клиенты</div>
                         </div>
                         <div class="navigation__body">
-                            <div class="subnavigation__item">Клиенты</div>
                             <div class="subnavigation__item">Аудитория</div>
+                            <div class="subnavigation__item">Клиенты</div>
+                            <div class="subnavigation__item"><div class="sidebar-button sidebar-button_icon-add">Добавить клиента</div></div>
                         </div>
                     </div>
 
