--- a/lessons/navigation/index.html
+++ b/lessons/navigation/index.html
@@ -5,6 +5,7 @@
         <link rel="stylesheet" href="sidebar.css" />
         <link rel="stylesheet" href="page.css" />
         <link rel="stylesheet" href="cards.css" />
+        <link rel="stylesheet" href="graph.css" />
     </head>
     <body>
         <div class="app">
@@ -149,6 +150,8 @@
                         <div class="navigation__body">
                             <div class="subnavigation__item">Товары</div>
                             <div class="subnavigation__item">Услуги</div>
+                            <div class="subnavigation__item">Сотрудники</div>
+                            <div class="subnavigation__item">Акции</div>
                         </div>
                     </div>
 
@@ -196,6 +199,7 @@
                     <div class="cards">
                         <div class="card">
                             <div class="card__top">
+                                <div class="ill ill_1"></div>
                                 <div class="card__title">Об организации</div>
                                 <div class="card__description">
                                     Заполните профиль, чтобы улучшить позицию компании 
@@ -221,6 +225,7 @@
                         </div>
                         <div class="card">
                             <div class="card__top">
+                                <div class="ill ill_2"></div>
                                 <div class="card__title">Товары и услугии</div>
                                 <div class="card__description">
                                     Расскажите о ваших услугах и товарах. 
@@ -245,6 +250,7 @@
                         </div>
                         <div class="card">
                             <div class="card__top">
+                                <div class="ill ill_3"></div>
                                 <div class="card__title">Реклама и продвижение</div>
                                 <div class="card__description">
                                     Приведите новых клиентов и сделайте вашу организацию заметнее.
@@ -254,6 +260,7 @@
                                 <div class="item-list">
                                     <div class="item-list__item">
                                         <a class="item-list__check item-list__check_adv" href="#">Кампания на картах</a>
+                                        <div class="badge">Активна</div>
                                     </div>
                                     <div class="item-list__item">
                                         <a class="item-list__check item-list__check_checked" href="#">Добавить акцию</a>
@@ -269,6 +276,7 @@
                         </div>
                         <div class="card">
                             <div class="card__top">
+                                <div class="ill ill_4"></div>
                                 <div class="card__title">Заказы</div>
                                 <div class="card__description">
                                     Следите за работой вашей организации.
@@ -296,6 +304,83 @@
                             </div>   
                         </div>
                     </div>
+
+                    <div class="graph">
+                        <div class="graph__header">
+                            Статистика за 30 дней 
+                        </div>
+                        <div class="graph__grid">
+                            <div>
+                                <div class="gr_date">
+                                    1 января
+                                </div>
+                            </div>
+                            <div></div>
+                            <div></div>
+                            <div></div>
+                            <div></div>
+                            <div></div>
+                            <div></div>
+                            <div>
+                                <div class="gr_order">
+                                    <div></div>
+                                </div>
+                            </div>
+                            <div></div>
+                            <div></div>
+                            <div></div>
+                            <div></div>
+                            <div></div>
+                            <div></div>
+                            <div></div>
+                            <div></div>
+                            <div></div>
+                            <div></div>
+                            <div>
+                                    <div class="gr_order">
+                                        <div></div>
+                                        <div></div>
+                                        <div></div>
+                                        <div></div>
+                                        <div></div>
+                                        <div></div>
+                                        <div></div>
+                                        <div></div>
+                                    </div>
+                            </div>
+                            <div>
+                                <div class="gr_order">
+                                    <div></div>
+                                    <div></div>
+                                    <div></div>
+                                    <div></div>
+                                    <div></div>
+                                </div>
+                            </div>
+                            <div></div>
+                            <div>
+                                <div class="gr_order">
+                                    <div></div>
+                                </div>
+                            </div>
+                            <div></div>
+                            <div></div>
+                            <div></div>
+                            <div></div>
+                            <div></div>
+                            <div></div>
+                            <div>
+                                <div class="gr_date">
+                                    31 января
+                                </div>
+                                <div class="gr_order">
+                                    <div></div>
+                                    <div></div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
                 </div>
             </div>    
             <div class="page__footer">
