--- a/lessons/navigation/index.html
+++ b/lessons/navigation/index.html
@@ -309,6 +309,11 @@
                         <div class="graph__header">
                             Статистика за 30 дней 
                         </div>
+                        <div class="grid__legend">
+                            <div class="grid__legend-item grid__legend-item_adv">Посмотрели рекламу</div>
+                            <div class="grid__legend-item grid__legend-item_lids">Перешли по рекламе</div>
+                            <div class="grid__legend-item grid__legend-item_order">Заказы</div>
+                        </div>
                         <div class="graph__grid">
                             <div>
                                 <div class="gr_date">
