--- a/lessons/navigation/index.html
+++ b/lessons/navigation/index.html
@@ -185,7 +185,7 @@
             <div class="page__top">
                 <div class="page__header">
                     <div class="page__header-title">
-                        
+                        Hair Facker в Бизнесе
                     </div>
                     <div class="page__header-tool">
                         <div class="icon icon_bell"></div>
