--- a/lessons/navigation/index.html
+++ b/lessons/navigation/index.html
@@ -187,7 +187,7 @@
                     <div class="page__header-title">
                         Hair Facker в Бизнесе
                     </div>
-                    
+
                     <div class="page__header-tool">
                         <div class="icon icon_bell"></div>
                         <div class="user">
@@ -227,7 +227,7 @@
                         <div class="card">
                             <div class="card__top">
                                 <div class="ill ill_2"></div>
-                                <div class="card__title">Товары и услугии</div>
+                                <div class="card__title">Товары и услуги</div>
                                 <div class="card__description">
                                     Расскажите о ваших услугах и товарах. 
                                     Клиенты смогут оставлять заявки онлайн.
