--- a/lessons/navigation/index.html
+++ b/lessons/navigation/index.html
@@ -221,6 +221,10 @@
                                     <div class="item-list__item">
                                         <span class="item-list__check item-list__check_checked">Подтвердить права</span>
                                     </div>
+                                    <div class="item-list__item">
+                                        <a class="item-list__title" href="#">Сотрудники</a>
+                                        <div class="item-list__counter">4</div>
+                                    </div>
                                 </div>
                             </div>        
                         </div>
