--- a/lessons/navigation/index.html
+++ b/lessons/navigation/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="page.css" />
     <link rel="stylesheet" href="cards.css" />
     <link rel="stylesheet" href="graph.css" />
+    <link rel="stylesheet" href="links.css" />
   </head>
   <body>
     <div class="app">
@@ -232,6 +233,22 @@
             </div>
           </div>
           <div class="page__body">
+
+            <div class="links">
+                <div class="links_link links_link_sprav">
+                    <div class="links_link-header">Яндекс.Справочник</div>
+                    <div class="links_link-description">Права подтверждены</div>
+                </div>
+                <div class="links_link links_link_map">
+                    <div class="links_link-header">Карточка организации</div>
+                    <div class="links_link-description">Москва, Полтавская ул., 16</div>
+                </div>
+                <div class="links_link links_link_site">
+                    <div class="links_link-header">Лендинг организации</div>
+                    <div class="links_link-description">Настроить</div>
+                </div>
+            </div>
+
             <div class="cards">
               <div class="card">
                 <div class="card__top">
@@ -390,7 +407,8 @@
 
             <div class="graph">
               <div class="graph__header">
-                Статистика за 30 дней
+                <span>Статистика за 30 дней</span>
+                <a href="#">Вся статистика</a>
               </div>
               <div class="grid__legend">
                 <div class="grid__legend-item grid__legend-item_adv">
@@ -412,11 +430,16 @@
                 <div></div>
                 <div></div>
                 <div></div>
-                <div></div>
+                <div>
+                    <div class="gr_order">
+                        <div></div>
+                    </div>
+                </div>
                 <div></div>
                 <div></div>
                 <div>
                   <div class="gr_order">
+                    <div></div>
                     <div></div>
                   </div>
                 </div>
@@ -441,6 +464,11 @@
                     <div></div>
                     <div></div>
                     <div></div>
+                    <div></div>
+                    <div></div>
+                    <div></div>
+                    <div></div>
+                    <div></div>
                   </div>
                 </div>
                 <div>
@@ -459,7 +487,14 @@
                   </div>
                 </div>
                 <div></div>
-                <div></div>
+                <div>
+                    <div class="gr_order">
+                        <div></div>
+                        <div></div>
+                        <div></div>
+                        <div></div>
+                      </div>
+                </div>
                 <div></div>
                 <div></div>
                 <div></div>
