--- a/lessons/navigation/adv.html
+++ b/lessons/navigation/adv.html
@@ -148,10 +148,10 @@
               </div>
               <div class="navigation__body">
                 <div class="subnavigation__item">
-                  <a href="adv.html">На картах №234568</a>
+                  <span>На картах №234568</span>
                 </div>
                 <div class="subnavigation__item">
-                  <a href="adv.html">Для сайта №234566</a>
+                  <span>Для сайта №234566</span>
                   <div class="nav-counter nav-counter_inside">1</div>
                 </div>
                 <div class="subnavigation__item">
@@ -221,7 +221,7 @@
         <div class="page__top">
           <div class="page__header">
             <div class="page__header-title">
-              Hair Facker в Бизнесе
+              Реклама
             </div>
 
             <div class="page__header-tool">
@@ -234,29 +234,13 @@
           </div>
           <div class="page__body">
 
-            <div class="links">
-                <div class="links_link links_link_sprav">
-                    <div class="links_link-header">Яндекс.Справочник</div>
-                    <div class="links_link-description">Права подтверждены</div>
-                </div>
-                <div class="links_link links_link_map">
-                    <div class="links_link-header">Карточка организации</div>
-                    <div class="links_link-description">Москва, Полтавская ул., 16</div>
-                </div>
-                <div class="links_link links_link_site">
-                    <div class="links_link-header">Лендинг организации</div>
-                    <div class="links_link-description">Настроить</div>
-                </div>
-            </div>
-
             <div class="cards">
               <div class="card">
                 <div class="card__top">
                   <div class="ill ill_1"></div>
                   <div class="card__title">Об организации</div>
                   <div class="card__description">
-                    Заполните профиль, чтобы улучшить позицию компании в
-                    результатах поиска.
+                    Чем больше у нас информации о вашей организации, тем эффективнее реклама.
                   </div>
                 </div>
                 <div class="card__bottom">
@@ -287,36 +271,23 @@
                         >Подтвердить права</span
                       >
                     </div>
-                    <div class="item-list__item">
-                      <a class="item-list__title" href="#">Сотрудники</a>
-                      <div class="item-list__counter">4</div>
-                    </div>
                   </div>
                 </div>
               </div>
               <div class="card">
                 <div class="card__top">
                   <div class="ill ill_2"></div>
-                  <div class="card__title">Товары и услуги</div>
+                  <div class="card__title">Цели рекламной кампании</div>
                   <div class="card__description">
-                    Расскажите о ваших услугах и товарах. Клиенты смогут
-                    оставлять заявки онлайн.
+                    Куда приземляется рекламный трафик и какие действия должны совершить пользователи.
                   </div>
                 </div>
                 <div class="card__bottom">
                   <div class="item-list">
                     <div class="item-list__item">
-                      <a class="item-list__title" href="#">Услуги</a>
-                      <div class="item-list__counter">2</div>
-                    </div>
-                    <div class="item-list__item">
-                      <a class="item-list__title" href="#">Товары</a>
-                      <div class="item-list__counter">10</div>
-                    </div>
-                    <div class="item-list__item">
-                      <span class="item-list__check item-list__check_unchecked"
-                        >Настроить форму заказа</span
-                      >
+                      <span class="item-list__check item-list__check_unchecked">
+                        Цель: 3 цели из Метрики
+                      </span>
                     </div>
                   </div>
                 </div>
@@ -324,196 +295,27 @@
               <div class="card">
                 <div class="card__top">
                   <div class="ill ill_3"></div>
-                  <div class="card__title">Реклама и продвижение</div>
+                  <div class="card__title">Объявления и площадки</div>
                   <div class="card__description">
-                    Приведите новых клиентов и сделайте вашу организацию
-                    заметнее.
+                    Объявления создаются автоматически. Вы можете отключать те, что кажутся неудачными. 
                   </div>
                 </div>
                 <div class="card__bottom">
                   <div class="item-list">
-                    <div class="item-list__item">
-                      <a class="item-list__check item-list__check_adv" href="adv.html"
-                        >Кампания на картах</a
-                      >
-                      <div class="badge">Активна</div>
-                    </div>
-                    <div class="item-list__item">
-                      <a class="item-list__check item-list__check_adv" href="adv.html"
-                        >Кампания на сайта</a
-                      >
-                      <div class="badge badge_warning">Ожидает оплаты</div>
-                    </div>
                     <div class="item-list__item">
                       <a
                         class="item-list__check item-list__check_checked"
                         href="#"
-                        >Добавить акцию</a
+                        >Рекламные объявления созданы</a
                       >
                     </div>
-                    <div class="item-list__item">
-                      <span class="item-list__check item-list__check_unchecked"
-                        >Настроить форму заказа</span
-                      >
-                    </div>
-                    <div class="item-list__item">
-                      <a
-                        class="item-list__check item-list__check_unchecked"
-                        href="#"
-                        >Настроить лендинг</a
-                      >
-                    </div>
+                    
                   </div>
                 </div>
               </div>
-              <div class="card">
-                <div class="card__top">
-                  <div class="ill ill_4"></div>
-                  <div class="card__title">Заказы</div>
-                  <div class="card__description">
-                    Следите за работой вашей организации.
-                  </div>
-                </div>
-                <div class="card__bottom">
-                  <div class="item-list">
-                    <div class="item-list__item">
-                      <a class="item-list__title" href="#">Заказов сегодня</a>
-                      <div class="item-list__counter">2</div>
-                    </div>
-                    <div class="item-list__item">
-                      <a class="item-list__title" href="#"
-                        >Неотвеченные отзывы</a
-                      >
-                      <div class="item-list__counter item-list__counter_alert">
-                        1
-                      </div>
-                    </div>
-                    <div class="item-list__item">
-                      <a class="item-list__title" href="#"
-                        >Пропущенные звонки</a
-                      >
-                      <div class="item-list__counter item-list__counter_alert">
-                        1
-                      </div>
-                    </div>
-                    <div class="item-list__item">
-                        <a class="item-list__title" href="#">Рейтинг</a>
-                        <div class="item-list__counter">4.8</div>
-                      </div>
-                    <div class="item-list__item">
-                      <a class="item-list__title" href="#">Клиентов</a>
-                      <div class="item-list__counter">24</div>
-                    </div>
-                  </div>
-                </div>
-              </div>
+              
             </div>
 
-            <div class="graph">
-              <div class="graph__header">
-                <span>Статистика за 30 дней</span>
-                <a href="#">Вся статистика</a>
-              </div>
-              <div class="grid__legend">
-                <div class="grid__legend-item grid__legend-item_adv">
-                  Посмотрели рекламу <span>8k <i>+600</i></span>
-                </div>
-                <div class="grid__legend-item grid__legend-item_lids">
-                  Перешли по рекламе <span>4k <i>+320</i></span>
-                </div>
-                <div class="grid__legend-item grid__legend-item_order">
-                  Заказы <span>48 <i>+2</i></span>
-                </div>
-              </div>
-              <div class="graph__grid">
-                <div>
-                  <div class="gr_date">
-                    1 января
-                  </div>
-                </div>
-                <div></div>
-                <div></div>
-                <div></div>
-                <div>
-                    <div class="gr_order">
-                        <div></div>
-                    </div>
-                </div>
-                <div></div>
-                <div></div>
-                <div>
-                  <div class="gr_order">
-                    <div></div>
-                    <div></div>
-                  </div>
-                </div>
-                <div></div>
-                <div></div>
-                <div></div>
-                <div></div>
-                <div></div>
-                <div></div>
-                <div></div>
-                <div></div>
-                <div></div>
-                <div></div>
-                <div>
-                  <div class="gr_adv"></div> 
-                  <div class="gr_order">
-                    <div></div>
-                    <div></div>
-                    <div></div>
-                    <div></div>
-                    <div></div>
-                    <div></div>
-                    <div></div>
-                    <div></div>
-                    <div></div>
-                    <div></div>
-                    <div></div>
-                    <div></div>
-                    <div></div>
-                  </div>
-                </div>
-                <div>
-                  <div class="gr_order">
-                    <div></div>
-                    <div></div>
-                    <div></div>
-                    <div></div>
-                    <div></div>
-                  </div>
-                </div>
-                <div></div>
-                <div>
-                  <div class="gr_order">
-                    <div></div>
-                  </div>
-                </div>
-                <div></div>
-                <div>
-                    <div class="gr_order">
-                        <div></div>
-                        <div></div>
-                        <div></div>
-                        <div></div>
-                      </div>
-                </div>
-                <div></div>
-                <div></div>
-                <div></div>
-                <div></div>
-                <div>
-                  <div class="gr_date">
-                    31 января
-                  </div>
-                  <div class="gr_order">
-                    <div></div>
-                    <div></div>
-                  </div>
-                </div>
-              </div>
-            </div>
           </div>
         </div>
         <div class="page__footer">
