--- a/lessons/navigation/index.html
+++ b/lessons/navigation/index.html
@@ -334,13 +334,13 @@
                   <div class="item-list">
                     <div class="item-list__item">
                       <a class="item-list__check item-list__check_adv" href="adv.html"
-                        >Кампания на картах</a
+                        >На картах №234568</a
                       >
                       <div class="badge">Активна</div>
                     </div>
                     <div class="item-list__item">
                       <a class="item-list__check item-list__check_adv" href="adv.html"
-                        >Кампания на сайта</a
+                        >Для сайта №234566</a
                       >
                       <div class="badge badge_warning">Ожидает оплаты</div>
                     </div>
